--- a/templates/signature.html
+++ b/templates/signature.html
@@ -201,7 +201,7 @@
 </%def>
 
 <%def name="print_sigs_for_class(sigs_list, whclass)">
-    <span class="infoblock_header_text">${tr.gettext('Signatues and anomalies')} ${whclass}${tr.gettext('th class')}:</span><br />
+    <span class="infoblock_header_text">${tr.gettext('Signatures and anomalies')} ${whclass}${tr.gettext('th class')}:</span><br />
     ${print_sigs_list(sigs_list)}
 </%def>
 
