--- a/templates/sleeper.html
+++ b/templates/sleeper.html
@@ -64,13 +64,13 @@
               <p>${tr.gettext('Offense')}:</p>
               <ul>
                   <li><img src="/static/img/sleepers/icons/optimal.jpg" />${tr.gettext('Attack range')}: <b>${sleeper.optimal | dotted_number}</b></li>
-                  <li><img src="/static/img/sleepers/icons/dps_total.png" />
-                      DPS <img src="/static/img/sleepers/icons/dps_laser.png" />:
+                  <li>
+                      Turret DPS <img src="/static/img/sleepers/icons/dps_laser.png" />:
                       <img src="/static/img/sleepers/icons/dps_em.jpg" /> ${sleeper.dps_em}
                       <img src="/static/img/sleepers/icons/dps_therm.jpg" /> ${sleeper.dps_therm}
                   </li>
-                  <li><img src="/static/img/sleepers/icons/dps_total.png" />
-                      DPS <img src="/static/img/sleepers/icons/dps_launcher.png" />:
+                  <li>
+                      Missile DPS <img src="/static/img/sleepers/icons/dps_launcher.png" />:
                       <img src="/static/img/sleepers/icons/dps_kin.jpg" /> ${sleeper.dps_kin}
                       <img src="/static/img/sleepers/icons/dps_exp.jpg" /> ${sleeper.dps_exp}
                   </li>
